# online-feature-decorrelation

./: .gitignore  CMakeLists.txt  LinearCorrelation  README.md  config_example.sh  experiment_endtoend.cpp  experiment_linear.cpp  experiment_linear_2phase.cpp  experiment_single_layer_generator.cpp
include/: utils.h
include/nn/: neuron.h  utils.h
include/nn/networks/: dense_network.h  single_layer_network.h
src/: utils.cpp
src/experiment/: Experiment.cpp
src/nn/: neuron.cpp  utils.cpp
src/nn/networks/: dense_network.cpp  neural_network.cpp  single_layer_network.cpp
vis/: gen.sh
